--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ terraform.rc
 *.terraform.lock.hcl
 oci-managed/oke/kubeconfig
 oci-managed/traefik-values.yml
+cert.pem
+cert.key
+oci-managed/nlb/traefik_values.yaml
